# skills_analyzer

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  dev.sh  docker-compose.yml  skills_analyzer_PRD.docx  start.sh
.claude/skills/crawl-korea-live/: SKILL.md  reference.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: analysis.py  compare.py  members.py  projects.py  roadmap.py
backend/app/core/: data_store.py
backend/app/data/: members.json  project_profiles.json  skill_profiles.json
backend/app/models/: __init__.py  domain.py  schemas.py
backend/app/services/: gap_analysis.py  roadmap.py  scoring.py
backend/tests/: test_health.py
frontend/: .eslintrc.json  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/app/analysis/[id]/: page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/app/members/: page.tsx
frontend/src/app/members/[id]/: page.tsx
frontend/src/app/members/new/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/app/projects/new/: page.tsx
frontend/src/app/roadmap/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/layout/: app-shell.tsx  header.tsx  sidebar.tsx
frontend/src/components/ui/: score-badge.tsx  skill-tag.tsx  stat-card.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/stores/: app-store.ts
(+1 files in other folders)
